--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <button class="buttonRock">Rock</button>
+    <button class="buttonPaper">Paper</button>
+    <button class="buttonScissors">Scissors</button>
+    
     <script src="gameEngine.js"></script>
 </body>
 </html>
