Add display result functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <button class="buttonRock">Rock</button>
     <button class="buttonPaper">Paper</button>
     <button class="buttonScissors">Scissors</button>
-    
+
+    <div class="resultContainer"></div>
+
     <script src="gameEngine.js"></script>
 </body>
 </html>
