Add running score and announce winner

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <span class="playerScoreSpan"></span>
+    <span class="computerScoreSpan"></span>
+    <div class="winner"></div>
+
     <button class="buttonRock">Rock</button>
     <button class="buttonPaper">Paper</button>
     <button class="buttonScissors">Scissors</button>
